--- a/app/views/viewers/select.html.erb
+++ b/app/views/viewers/select.html.erb
@@ -9,7 +9,7 @@
 		<div class="row">
 			<% @campaign.adverts.each do |advert| %>
 				<div class="small-12 medium-3 columns">
-					<%= link_to viewers_preview_path(advert) do %>
+					<%= link_to viewers_preview_path(id: advert, site: "one") do %>
 						<div class="ad-panel">
 							<p><%= advert.format %></p>
 							<p>Click to View</p>
