--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,10 @@
  *= require_self
  */
 
-iframe{width: 100% !important;height: 100% !important;}
+iframe{
+  width: 100% !important;
+  height: 100% !important;
+}
 
 
  body{
