--- a/app/views/viewers/select.html.erb
+++ b/app/views/viewers/select.html.erb
@@ -5,7 +5,7 @@
 			<img src="<%= @campaign.client.logo.url %>" class="client-logo">
 		</div>
 		<h2><%= @campaign.name %></h2>
-		<p>Select an Advert to View</p>
+		<p>Select an Ad Format to View</p>
 		<div class="row">
 			<% @campaign.adverts.each do |advert| %>
 				<div class="small-12 medium-3 columns">
