--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -305,7 +305,7 @@ iframe{
   background: #545454;
   border-radius: 3px;
   margin: 1rem 0;
-  padding: 2.5rem 0;
+  padding: 2.5rem 1rem;
   p:first-of-type{
     font-size: 1.3rem;
     margin-bottom: 0.3rem;
